[package]
name = "lsp-servers"
version = "0.1.3"
edition = "2024"
description = "Provides a list of relevant language servers for a given directory."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gusjengis/lsp-servers"
readme = "README.md"
keywords = ["lsp", "language-server", "development-tools"]
categories = ["development-tools"]

[lib]
name = "lsp_servers"
path = "src/lib.rs"

[dependencies]
walkdir = "2.5.0"
